fixed horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ ul{
     display:flex;
     justify-content: center;
     align-items:center;
-    width:100vw;
+    width:100%;
     background-color: #e5e7eb;
     padding:30px 0px;
     flex:1;
@@ -136,6 +136,7 @@ ul{
     padding:36px 100px;
     display:flex;
     gap:100px;
+    margin:20px 0px;
 }
 .container2 button{
     border: 2px solid white;
